Add README & LICENSE

--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -38,10 +38,10 @@
 
 {{- $softwareGroupsPromptLines := list
   "Select which groups of software to install:"
-  "  base  - Essential tools (Git, Docker)"
+  "  base  - Essential tools (git, docker)"
   "  dev   - Developer tools (xmake, uv, build tools)"
   "  cli   - CLI productivity tools (zoxide, bat, eza)"
-  "  tool  - Extra utilities (typst, Anytype, KeePassXC, vhs)"
+  "  tool  - Extra utilities (typst, vhs)"
 -}}
 
 {{- $availableGroups := list "base" "dev" "cli" "tool" -}}
