Install fzf module also in powershell v7

--- a/.chezmoiscripts/windows/run_onchange_before_1_install-winget-packages.ps1.tmpl
+++ b/.chezmoiscripts/windows/run_onchange_before_1_install-winget-packages.ps1.tmpl
@@ -86,3 +86,9 @@ if ($PSVersionTable.PSEdition -eq 'Desktop') {
     # restore the original module path so PSReadLine can load
     $Env:PSModulePath = $origPSModulePath
 }
+
+$pwshPath = "$env:ProgramFiles\PowerShell\7\pwsh.exe"
+if (Test-Path $pwshPath) {
+    Write-Host "Installing PSFzf for PowerShell 7..."
+    & $pwshPath -NoProfile -Command "Install-Module -Name PSFzf -Force -Scope CurrentUser"
+}
