--- a/dot_config/powershell/autoload/scr.ps1.tmpl
+++ b/dot_config/powershell/autoload/scr.ps1.tmpl
@@ -7,7 +7,7 @@ function scr {
         [switch]$Version,
 
         [Alias('h', 'help')]
-        [switch]$ShowHelp,
+        [switch]$ShowHelp
     )
 
     $scriptVersion = "v9"
